--- a/Calculator/Calculator/Calculator.vcxproj.filters
+++ b/Calculator/Calculator/Calculator.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="_main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Parts.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h">
@@ -74,10 +77,21 @@
     <ClInclude Include="Menu.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Parts.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="입력값.txt">
+    <Text Include="스택.txt">
       <Filter>리소스 파일</Filter>
     </Text>
+    <Text Include="아스키아트.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
